# padavan-ng

./: .gitlab-ci.yml  Common.tar.xz  Dockerfile  README.md  Readme-Hadzhioglu.txt  Readme-Mahatb.txt  Readme-Stepan.txt  readme.eng.txt  readme.rus.txt
md5/: config.md5  kernel.md5  ralink_nand.md5
toolchain/: configure.ac
toolchain/config/: configure.in.in
toolchain/samples/mipsel-linux-uclibc/: crosstool.config
trunk/: .config  build_firmware.sh  config_u2  test_latency_optimizations.sh
trunk/backports/: .kernel_config_md5  Kconfig.kernel
trunk/configs/boards/: busybox.config  pt_ralink_latency_optimized.config  uclibc-mipsel.config
trunk/configs/templates/: mi-r3pro.config
trunk/docs/: LOW_LATENCY_OPTIMIZATIONS.md
trunk/include/: cross-mipsel-linux.cmake
trunk/libc/: Makefile  uClibc-ng-1.0.44.tar.xz  uClibc-ng-1.0.45.tar.xz  uClibc-ng-1.0.46.tar.xz  uClibc-ng-1.0.48.tar.xz  uClibc-ng-1.0.49.tar.xz  uClibc-ng-1.0.50.tar.xz  uClibc-ng-1.0.51.tar.xz
trunk/libc/uClibc-1.0.42/: .config
trunk/libs/: .gitignore  Makefile
trunk/libs/libav/: Makefile
trunk/libs/libcap-ng/: Makefile
trunk/libs/libcapng/: Makefile
trunk/libs/libcares/: Makefile
trunk/libs/libconfuse/: Makefile
trunk/libs/libcurl/: Makefile  curl-7.79.0.tar.xz  curl-7.88.1.tar.xz  curl-8.1.0.tar.xz  curl-8.1.1.tar.xz  curl-8.1.2.tar.xz  curl-8.10.0.tar.xz  curl-8.11.1.tar.xz  curl-8.12.0.tar.xz  curl-8.12.1.tar.xz  curl-8.13.0.tar.xz  curl-8.14.1.tar.xz  curl-8.2.0.tar.xz  curl-8.3.0.tar.xz  curl-orig.patch  no_docs_tests.patch  no_tests.patch
trunk/libs/libdeflate/: Makefile
trunk/libs/libev/: Makefile
trunk/libs/libevent/: Makefile
trunk/libs/libexif/: Makefile  libexif-0.6.25.tar.bz2  no_doc_test.patch
trunk/libs/libflac/: Makefile  flac-orig.patch
trunk/libs/libgetdns/: Makefile
trunk/libs/libjpeg/: Makefile
trunk/libs/libjson-c/: Makefile
trunk/libs/liblzo/: Makefile
trunk/libs/libmnl/: Makefile
trunk/libs/libnetfilter_queue/: Makefile
trunk/libs/libnghttp2/: Makefile  nghttp2-1.51.0.tar.xz  nghttp2-1.52.0.tar.xz  nghttp2-1.53.0.tar.xz  nghttp2-1.54.0.tar.xz  nghttp2-1.55.0.tar.xz  nghttp2-1.55.1.tar.xz  nghttp2-1.56.0.tar.xz  nghttp2-1.57.0.tar.xz  nghttp2-1.58.0.tar.xz  nghttp2-1.59.0.tar.xz  nghttp2-1.60.0.tar.xz  nghttp2-1.62.0.tar.xz  nghttp2-1.62.1.tar.xz  nghttp2-1.63.0.tar.xz  nghttp2-1.64.0.tar.xz  nghttp2-1.65.0.tar.xz  nghttp2-1.66.0.tar.xz
trunk/libs/libnghttp3/: Makefile  nghttp3-0.15.0.tar.xz  nghttp3-1.0.0.tar.xz  nghttp3-1.1.0.tar.xz  nghttp3-1.10.0.tar.xz  nghttp3-1.10.1.tar.xz  nghttp3-1.3.0.tar.xz  nghttp3-1.4.0.tar.xz  nghttp3-1.5.0.tar.xz  nghttp3-1.6.0.tar.xz  nghttp3-1.7.0.tar.xz  nghttp3-1.8.0.tar.xz  nghttp3-1.9.0.tar.xz
trunk/libs/libngtcp2/: Makefile  disabled-examples-in-cmakelists.patch  ngtcp2-0.19.0.tar.xz  ngtcp2-0.19.1.tar.xz  ngtcp2-1.0.0.tar.xz  ngtcp2-1.0.1.tar.xz  ngtcp2-1.1.0.tar.xz  ngtcp2-1.10.0.tar.xz  ngtcp2-1.12.0.tar.xz  ngtcp2-1.13.0.tar.xz  ngtcp2-1.2.0.tar.xz  ngtcp2-1.3.0.tar.xz  ngtcp2-1.5.0.tar.xz  ngtcp2-1.6.0.tar.xz  ngtcp2-1.7.0.tar.xz  ngtcp2-1.8.0.tar.xz  ngtcp2-1.8.1.tar.xz  ngtcp2-1.9.0.tar.xz  ngtcp2-1.9.1.tar.xz
trunk/libs/libnl/: Makefile
trunk/libs/libogg/: Makefile  disable-doc.patch
trunk/libs/libpcap/: Makefile
trunk/libs/libpcre/: Makefile
trunk/libs/libsodium/: Makefile
trunk/libs/libsqlite/: Makefile
trunk/libs/libssl/: Makefile  ca-certificates.crt  ca-certificates_update.sh
trunk/libs/libssl-1.1/: Makefile
trunk/libs/libssl-3.1/: Makefile
trunk/libs/libssl-3.3/: Makefile
trunk/libs/libssl1/: Makefile
trunk/libs/libssl1.1/: Makefile
trunk/libs/libssl3/: Makefile
trunk/libs/libssl3.1/: Makefile  ca-certificates.crt
trunk/libs/libsslquic/: Makefile  ca-certificates.crt  openssl-orig.patch
trunk/libs/libtirpc/: Makefile
trunk/libs/libtirpc/libtirpc-1.3.6/: configure.ac
trunk/libs/libtirpc/libtirpc-1.3.6/src/: getpeereid.c  rpc_com.h  svc_auth_gss.c  svc_dg.c  svc_raw.c  svc_vc.c  xdr_float.c
trunk/libs/libtirpc/libtirpc-1.3.6/tirpc/: reentrant.h
trunk/libs/libtirpc/libtirpc-1.3.6/tirpc/rpc/: rpcb_prot.h  rpcb_prot.x  rpcent.h
trunk/libs/libusb-1.0/: Makefile  libusb-1.0.28.tar.bz2  specifig.patch
trunk/libs/libvorbis/: Makefile
trunk/libs/libxml2/: Makefile
trunk/libs/libyaml/: Makefile
trunk/libs/libz/: Makefile
trunk/linux-3.4.x/fs/: exec.c  fcntl.c
trunk/linux-3.4.x/kernel/: fork.c  posix-cpu-timers.c  rcutree.c  workqueue.c
trunk/linux-3.4.x/lib/: Kconfig  Makefile
trunk/linux-3.4.x/mm/: mmap.c  rmap.c  slub.c
trunk/linux-3.4.x/net/: Kconfig  Makefile
trunk/linux-4.4.x/fs/: Makefile
trunk/tools/: depmod.sh
trunk/tools/lzma/: Makefile  lzma
trunk/tools/mkimage/: mkimage
trunk/tools/mksquashfs_xz/: Makefile  mksquashfs  squashfs-compatibility.patch
trunk/tools/mktplinkfw/: mktplinkfw2
trunk/tools/sstrip/: sstrip
trunk/user/: Makefile  hdparm-orig.patch  wpa_supplicant-orig.patch
trunk/user/802.1x/: rt2860apd
trunk/user/LPRng/: lpd.conf
trunk/user/accel-pptpd/: Makefile
trunk/user/adb/: adb
trunk/user/amneziawg/: Makefile  client.sh
trunk/user/aria2/: Makefile  aria.sh  disable-doc-test.patch
trunk/user/busybox/: Makefile  busybox-1.33.0-orig.patch  busybox-1.35.0-orig.patch  busybox-1.36.0-orig.patch
trunk/user/comgt-0.32/: comgt
trunk/user/dnscrypt-proxy/: Makefile  dnscrypt-proxy_start.sh
trunk/user/dnsmasq/: Makefile  dnsmasq-orig.patch
trunk/user/doh_proxy/: Makefile  doh_proxy.sh  doh_start.sh
trunk/user/dosfstools/: Makefile
trunk/user/dropbear/: 001-firmware-specific.patch  Makefile  dropbear-2024.84.tar.bz2  dropbear-2024.86.tar.bz2  dropbear-2025.87.tar.bz2  (+2 more)
(+4954 files in other folders)
